commit al master blog

--- a/blogbpost.html
+++ b/blogbpost.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-    <p>ESTO ES UN PARRAFO</p>
+    <div id="container">
+        <div id="post">
+
+            <h1>BLOG PERSONAL</h1>
+            <p>ESTO ES UN PARRAFO, EL MEJOR PARRAFO DE LA HISTORIA QUE TU PODRAS LEER ;)
+            </p>
+        </div>
+
+    </div>
 </body>
 
 </html>
