Finalizada la cabecera con titulo negro

--- a/blogbpost.html
+++ b/blogbpost.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Esta es una Cabecera creada por Jonathan Castillo
         </div>
         <div id="post">
 
