--- a/blogbpost.html
+++ b/blogbpost.html
@@ -15,6 +15,9 @@
             <h1>BLOG PERSONAL</h1>
             <p>ESTO ES UN PARRAFO, EL MEJOR PARRAFO DE LA HISTORIA QUE TU PODRAS LEER ;)
             </p>
+            <p>
+                Los blogs son lo mejor que me a podido pasar desde que llegue a esta ciudad y Freddy me esta enseñando
+            </p>
         </div>
 
     </div>
