Cambie el color de la letra y aumente un parrafo

--- a/blogbpost.html
+++ b/blogbpost.html
@@ -15,12 +15,13 @@
         </div>
         <div id="post">
 
-            <h1>BLOG PERSONAL</h1>
+            <h1>BLOG PERSONAL maestro</h1>
             <p>ESTO ES UN PARRAFO, EL MEJOR PARRAFO DE LA HISTORIA QUE TU PODRAS LEER ;)
             </p>
             <p>
                 Los blogs son lo mejor que me a podido pasar desde que llegue a esta ciudad y Freddy me esta enseñando
             </p>
+            <p>Suscribete y dale like</p>
         </div>
 
     </div>
